<resources>
    <string name="app_name">Anti Ragging</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_sos">SOS</string>
    <string name="menu_locate">Locate</string>
    <string name="menu_squad">Squad</string>
    <string name="menu_about">About</string>

    <string name="ragging_constitutes">Ragging constitutes the following acts:</string>

    <string name="bullet_point">\u2022</string>
    <string name="edit_hint">Enter updated message</string>
    <string name="emergency_hint">Enter Emergency Contact</string>
    <string name="save">Save</string>
    <string name="call_now">Call Now</string>
    <string name="pick_location">Pick Location</string>
    <string name="share_location">Share Location</string>
    <string name="tap_pick_location">Tap pick location to get your location</string>
    <string name="enter_message">Enter Message</string>

    <string name="guideline1">Any conduct by any student whether by words spoken or written or by an act which has the effect of teasing, treating or handling with rudeness or any other student.</string>
    <string name="guideline2">Indulging in rowdy or indisciplined activities by any student which causes or is likely to cause annoyance, hardship, physical or psychological harm or to raise fear or apprehension thereof in any fresher or any other student.</string>
    <string name="guideline3">Asking any student to do any act which such student will not in the ordinary course do and which has the effect of causing or generating a sense of shame, or torment or embarrassment to adversely affect the physique or psyche of such fresher or any other student.</string>
    <string name="guideline4">Any act by a senior student that prevents, disrupts the regular academic activity of any other student or a fresher.</string>
    <string name="guideline5">Exploiting the services of a fresher or any other student for completing the academic tasks assigned to an individual or a group of students.</string>
    <string name="guideline6">Any act of financial extortion or forceful expenditure burden put on a fresher or any other student by students.</string>
    <string name="guideline7">Any act of physical abuse including all variants of it: sexual abuse, homosexual assaults, stripping, forcing obscene and lewd acts, gestures, causing bodily harm or any other danger to health or person.</string>
    <string name="guideline8">Any act or abuse by spoken words, e-mails, post, public insults, which would also include deriving perverted pleasure, the vicarious or sadistic thrill from actively or passively participating in the discomfiture to fresher or any other student.</string>
    <string name="guideline9">Any act that affects the mental health and self-confidence of a fresher or any other student with or without an intent to derive a sadistic pleasure or showing off power, authority or superiority by a student over any fresher or any other student.</string>
    <string name="guideline10">Any act of physical or mental abuse (including bullying and exclusion) targeted at another student (fresher or otherwise) on the ground of color, race, religion, origins, linguistic identity, place of birth, place of residence or economic background.</string>
    <string name="guideline11">All senior students are advised to guide and treat junior students affectionately.</string>
    <string name="guideline12">Junior students may contact their Chairperson or other University functionaries like Proctor, Dean Students Welfare, Chief Warden, Wardens or Chief Security Officer for help and guidance.</string>
    <string name="post_the_message">Post the message</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_post_content">Are you sure you want to Delete the post</string>
    <string name="yes">Yes</string>
    <string name="download_guidlines">Download Guidlines</string>
    <string name="guideline_url"><![CDATA[https://firebasestorage.googleapis.com/v0/b/antiragginglnmiit.appspot.com/o/anti_ragging_guidelines.png?alt=media&token=90dbb2ff-7eeb-4d45-a47b-66fa79287063]]></string>
    <string name="download_successful">image downloaded via IntentService is successfully</string>
    <string name="sos_call_button">SOS call button</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="call_button">Call Button</string>
    <string name="ui_image">UI image</string>
</resources>
