<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sos"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/menu_sos" />
        <item
            android:id="@+id/nav_locate"
            android:icon="@drawable/ic_pin_drop_black_24dp"
            android:title="@string/menu_locate" />
        <item
            android:id="@+id/nav_squad"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_squad" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
    </group>

</menu>
