<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.imad.antiragging.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sos"
        android:name="com.imad.antiragging.ui.sos.SosFragment"
        android:label="@string/menu_sos"
        tools:layout="@layout/fragment_sos" />

    <fragment
        android:id="@+id/nav_locate"
        android:name="com.imad.antiragging.ui.locate.LocateFragment"
        android:label="@string/menu_locate"
        tools:layout="@layout/fragment_locate" />

    <fragment
        android:id="@+id/nav_squad"
        android:name="com.imad.antiragging.ui.squad.SquadFragment"
        android:label="@string/menu_squad"
        tools:layout="@layout/fragment_squad" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.imad.antiragging.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>